--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
-        
+        <div class="frame">
+            <img src="" alt="">
+        </div>
+        <button>Next</button>
     </body>
 </html>
