Update html/style for frame appearance and size/shadow, update script to await initial API call that fetches the gallery object IDs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="frame">
-            <img src="" alt="">
+            <img src="" alt="Gallery Image">
         </div>
         <button>Next</button>
     </body>
