Add container for painting info, add media query to change layout mode on mobile and add picture element to change which size img is displayed based on user screen size (I know picture is for art direction and img with srcset and sizes is for serving different sizes of the same image, but wasn't sure how to do that with unknown image sizes from API)

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     </head>
     <body>
         <div class="frame">
-            <img src="" alt="Gallery Image">
+            <picture>
+                <source media="(width < 600px)" srcset="" />
+                <img src="" alt="">
+            </picture>
         </div>
-        <button>Next</button>
+        <div class="gallery-data">
+            <ul class="art-info">
+                <li class="title"></li>
+                <li class="artist"></li>
+                <li class="year"></li>
+            </ul>
+            <button>Next</button>
+        </div>
     </body>
 </html>
